[package]
name = "cw-tests"
authors       = { workspace = true }
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
rust-version  = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
haloswap          = { workspace = true }
halo-token        = { workspace = true }
halo-pair         = { workspace = true }
halo-router       = { workspace = true }
halo-factory      = { workspace = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cosmwasm-storage  = { workspace = true }
cw-storage-plus   = { workspace = true }
cw2               = { workspace = true }
schemars          = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }
cw20              = { workspace = true }
cw20-base         = { workspace = true }
cw-multi-test     = { workspace = true }
