[package]
name          = "halo-stable-pair"
authors       = { workspace = true }
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
rust-version  = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bignumber           = { workspace = true }
haloswap            = { workspace = true }
halo-factory        = { workspace = true }
halo-pair           = { workspace = true }
cw-utils            = { workspace = true }
cw-storage-plus     = { workspace = true }
cw2                 = { workspace = true }
cw20                = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cosmwasm-storage    = { workspace = true }
getrandom           = { workspace = true }
schemars            = { workspace = true }
serde               = { workspace = true }

[dev-dependencies]
cw-multi-test     = { workspace = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-storage  = { workspace = true }